--- a/scb-ui-zk/src/main/webapp/pages/common/login.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/login.zul
@@ -1,3 +1,4 @@
+<?meta http-equiv="Content-Type" content="text/html; charset=UTF-8"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul" inline="true"?>
 <?page title="${c:l('txt.Login')}"?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
@@ -9,8 +10,6 @@
 		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')"
 		form="@id('fx') @load(vm) @save(vm, before={'loginCmd'})">
 	
-		
-		
 		<hlayout spacing="0">
 			<vbox hflex="1" />
 			
@@ -26,7 +25,7 @@
 		</hlayout>
 		
 	
-		<hlayout xmlns:h="xhtml">
+		<hlayout xmlns:h="xhtml" >
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center" >
@@ -37,105 +36,97 @@
 					</caption> 
 				</window>
 				
-				<grid width="428px" style="margin-top: 20px;">
-					<columns>
-						<column />
-					</columns>
-					<rows>
-						<row align="right" >
-							<html>
-								<!-- scb-ui-zk-1.0-SNAPSHOT -->
-								<![CDATA[
-								<form id="loginForm" onsubmit="return validateForm()" method="post" >
-									<table>
-										<tr>
-											<td style="padding-top: 10px; padding-right: 10px;" >
-												${c:l('txt.ui.common.Username')}
-											</td>
-											<td style="padding-top: 10px; padding-right: 10px;">
-												<input type="text" id="username" name="username" class="z-textbox" onBlur="validateUsername()" />
-											</td>
-											<td>
-												<span id="usernameRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
-													${c:l('msg.ui.validation.err.valueRequired')}
-												</span>
-											</td>
-										</tr>
-										<tr>
-											<td style="padding-top: 10px; padding-right: 10px;">
-												${c:l('txt.ui.common.password')}
-											</td>
-											<td style="padding-top: 10px; padding-right: 10px;">
-												<input type="password" id="password" name="password" class="z-textbox" onBlur="validatePassword()" />
-											</td>
-											<td>
-												<span id="passwordRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
-													${c:l('msg.ui.validation.err.valueRequired')}
-												</span>
-											</td>
-										</tr>
-										<tr>
-											<td colspan="2" align="right" style="padding: 10px;">
-												<input id="btnSubmit" type="submit" class="z-button" value="${c:l('txt.ui.common.ToLogin')}" />
-											</td>
-											<td>
-											</td>
-										</tr>
-									</table>
-								</form>
-								
-								<script>
-									function validateForm() {
-										var usernameValid = validateUsername();
-										var passwordValid = validatePassword();
-										
-										if (!usernameValid || !passwordValid) {
-											return false;
-										}
-										
-										return true;
-									}
-									
-									function validateUsername() {
-										var username = document.forms["loginForm"]["username"].value;
-									    
-									    var usernameRequiredSpan = document.getElementById('usernameRequiredSpan');
-									    
-									    usernameRequiredSpan.setAttribute("style", "visibility: hidden");
-									    
-									    var valid = true;
-									    if (username == null || username == "") {
-									    	usernameRequiredSpan.setAttribute("style", "visibility: visible");
-									        valid = false;
-									    }
-									    return valid;
-									}
-									
-									function validatePassword() {
-									    var password = document.forms["loginForm"]["password"].value;
-									    var passwordRequiredSpan = document.getElementById('passwordRequiredSpan');
-									    
-									    passwordRequiredSpan.setAttribute("style", "visibility: hidden");
-									    
-									    var valid = true;
-									    if (password == null || password == "") {
-									    	passwordRequiredSpan.setAttribute("style", "visibility: visible");
-									        valid = false;
-									    }
-									    return valid;
-									}
-									
-									function init() {
-										document.forms["loginForm"].action = "${pageContext.request.contextPath}" + "/login"
-									}
-									
-									init();
- 								</script>
-								]]>
-							</html>
-						</row>
-					</rows>
-				</grid>
+				<div style="margin-bottom: 10px;"/>
+				<html >
+					<!-- scb-ui-zk-1.0-SNAPSHOT -->
+					<![CDATA[
+					<form id="loginForm" onsubmit="return validateForm()" method="post" >
+						<table>
+							<tr>
+								<td style="padding-top: 10px; padding-right: 10px;" >
+									${c:l('txt.ui.common.Username')}
+								</td>
+								<td style="padding-top: 10px; padding-right: 10px;">
+									<input type="text" id="username" name="username" class="z-textbox" onBlur="validateUsername()" />
+								</td>
+								<td>
+									<span id="usernameRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
+										${c:l('msg.ui.validation.err.valueRequired')}
+									</span>
+								</td>
+							</tr>
+							<tr>
+								<td style="padding-top: 10px; padding-right: 10px;">
+									${c:l('txt.ui.common.password')}
+								</td>
+								<td style="padding-top: 10px; padding-right: 10px;">
+									<input type="password" id="password" name="password" class="z-textbox" onBlur="validatePassword()" />
+								</td>
+								<td>
+									<span id="passwordRequiredSpan" class="alert alert-danger" style="visibility: hidden" >
+										${c:l('msg.ui.validation.err.valueRequired')}
+									</span>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2" align="right" style="padding: 10px;">
+									<input id="btnSubmit" type="submit" class="z-button" value="${c:l('txt.ui.common.ToLogin')}" />
+								</td>
+								<td>
+								</td>
+							</tr>
+						</table>
+					</form>
+					
+					<script>
+						function validateForm() {
+							var usernameValid = validateUsername();
+							var passwordValid = validatePassword();
+							
+							if (!usernameValid || !passwordValid) {
+								return false;
+							}
+							
+							return true;
+						}
+						
+						function validateUsername() {
+							var username = document.forms["loginForm"]["username"].value;
+						    
+						    var usernameRequiredSpan = document.getElementById('usernameRequiredSpan');
+						    
+						    usernameRequiredSpan.setAttribute("style", "visibility: hidden");
+						    
+						    var valid = true;
+						    if (username == null || username == "") {
+						    	usernameRequiredSpan.setAttribute("style", "visibility: visible");
+						        valid = false;
+						    }
+						    return valid;
+						}
+						
+						function validatePassword() {
+						    var password = document.forms["loginForm"]["password"].value;
+						    var passwordRequiredSpan = document.getElementById('passwordRequiredSpan');
+						    
+						    passwordRequiredSpan.setAttribute("style", "visibility: hidden");
+						    
+						    var valid = true;
+						    if (password == null || password == "") {
+						    	passwordRequiredSpan.setAttribute("style", "visibility: visible");
+						        valid = false;
+						    }
+						    return valid;
+						}
+						
+						function init() {
+							document.forms["loginForm"].action = "${pageContext.request.contextPath}" + "/login"
+						}
+						
+						init();
+						</script>
+					]]>
+				</html>
 			</vbox>
 			
 			<vbox hflex="1" />
