--- a/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
@@ -7,8 +7,11 @@
 		<menuitem label="${c:l('txt.ui.menu.application')}" 
 			href="/pages/public/prihlaska-do-klubu.zul" 
 			visible="@load(!vm.isUserLogged())" />
-		<menuitem label="${c:l('txt.ui.menu.applicationList')}" 
+		<menuitem label="${c:l('txt.ui.menu.applications')}" 
 			href="/pages/secured/seznam-prihlasek.zul" 
+			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))" />
+		<menuitem label="${c:l('txt.ui.menu.courses')}" 
+			href="/pages/secured/seznam-kurzu.zul" 
 			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))" />
 		<menu label="Hardware" visible="false">
 			<menupopup>
