--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -3,55 +3,32 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-		<borderlayout self="@{define(mainContent)}" hflex="1" vflex="1" apply="org.zkoss.bind.BindComposer" 
-			 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.DashboardVM')" >
-			<center border="none" style="background:#dfe8f6 url('${pageContext.request.contextPath}/resources/img/background2014Full.jpg') no-repeat center center;" >
-				<div>
-					<hlayout spacing="0">
-						<vbox hflex="1" />
-						
-						<vbox hflex="20" pack="center" visible="false">
-							<headline label="${c:l('txt.ui.menu.dashboard')}"  menuSelected="menu_dashboard" iconSclass="z-icon-tachometer" />
-						</vbox>
-						
-						<vbox hflex="1" />
-					</hlayout>
-					
-					<hlayout spacing="0">
-					
-						<vbox hflex="1" />
-						
-						<vbox hflex="20" pack="center">
-							<hbox style="margin-top: 30px">
-								<label value="${c:l('txt.ui.dashboard.welcomeInfo')}" style="font-size: 20px;font-weight: bold; color: #438eb9;" />
-							</hbox>
-							<button label="@load(vm.newCourseApplicationTitle)" 
-								href="/pages/public/prihlaska-do-klubu.zul"
-								sclass="btn-warning" iconSclass="z-icon-file-text"
-								style="margin-right: 10px; margin-top: 30px; font-weight: bold; height: 50px" />
-						</vbox>
-						
-						<vbox hflex="1" />
-					</hlayout>
-				</div>
-			</center>
-			<south border="normal" style="background: #e4e6e9;" >
+	<borderlayout self="@{define(mainContent)}" hflex="1" vflex="1" apply="org.zkoss.bind.BindComposer" 
+		 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.DashboardVM')" >
+		<center border="none" style="background:#dfe8f6 url('${pageContext.request.contextPath}/resources/img/background2014Full.jpg') no-repeat center center;" >
+			<div>
 				<hlayout spacing="0">
+				
 					<vbox hflex="1" />
 					
-					<vbox hflex="20" pack="center" align="end" >
-						<hbox align="center" height="70px">
-							${c:l('txt.ui.common.contact')}: 
-							<label value="${c:l('txt.ui.organization.phone')}" style="white-space: nowrap;" />, 
-							<a href="mailto:${c:l('txt.ui.organization.email')} ">${c:l('txt.ui.organization.email')} </a>
-							
+					<vbox hflex="20" pack="center">
+						<hbox>
+							<headline label="${c:l('txt.ui.dashboard.welcomeInfo')}"  menuSelected="menu_dashboard" iconSclass="z-icon-tachometer" />
 						</hbox>
+						<button label="@load(vm.newCourseApplicationTitle)" 
+							href="/pages/public/prihlaska-do-klubu.zul"
+							sclass="btn-warning" iconSclass="z-icon-file-text"
+							style="margin-right: 10px; margin-top: 20px; font-weight: bold; height: 50px" />
 					</vbox>
 					
 					<vbox hflex="1" />
 				</hlayout>
-			</south>
-		</borderlayout>
+			</div>
+		</center>
+		<south border="none" >
+			<include src="/pages/common/template/footer.zul"/>
+		</south>
+	</borderlayout>
 </zk>
 
 
