--- a/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
@@ -90,6 +90,7 @@
 										model="@load(vm.courseYearList)"
 										mold="select"
 										tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+										disabled="@load(vm.updateMode)"
 										height="25px"
 										tabindex="2"  >
 									</listbox>
@@ -169,10 +170,13 @@
 					mold="paging"
 					pageSize="10"
 					visible="@load(vm.updateMode)"
+					multiple="true"
+					checkmark="true"
+					selectedItems="@bind(vm.participantSelectedList)"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="3" >
+			            <auxheader class="header" colspan="4" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
@@ -183,9 +187,12 @@
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
 			            			<hbox>
-			            				<button onClick="@command('newCourseParticipantCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
-<!-- 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseParticipantList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" /> -->
-<!-- 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" /> -->
+			            				<button tooltiptext="${c:l('txt.ui.common.remove')}" sclass="btn-danger" iconSclass="z-icon-minus" onClick="@command('courseParticipantsDeleteCmd')" />
+			            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" />
+			            				<menupopup id="addCourseParticipantsFromApplicationPopup" >
+											<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
+											<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
+								       	</menupopup>
 									</hbox>
 								</vbox>
 							</hbox>
@@ -193,28 +200,27 @@
 			        </auxhead>
 					
 			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(courseParticipant.contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="left" />
+			        	<listheader width="25px" />
+			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(contact.surname)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(birthdate)" align="left" />
 			            <listheader width="50px" align="center" />
 			        </listhead>
 			         
 			        <template name="model">
 			            <listitem>
+			            	<listcell/>
 			                <listcell label="${each.contact.surname} ${each.contact.firstname}" />
 			                <listcell label="@load(each.birthdate) @converter(vm.dateConverter)" />	                	
 			                <listcell>
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}" />
 			                	<menupopup id="menuCourse_${each.uuid}" >
-									<menuitem label="Detail" onClick="@command('courseParticipantDetailCmd', uuid=each.uuid)" />
-									<menuitem label="Odebrat" onClick="@command('courseParticipantDeleteCmd', uuid=each.uuid)"  />
+									<menuitem label="${c:l('txt.ui.common.detail')}" onClick="@command('courseParticipantDetailCmd', uuid=each.uuid)" />
+									<menuitem label="${c:l('txt.ui.common.remove')}" onClick="@command('courseParticipantDeleteCmd', uuid=each.uuid)"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
 			        </template>
 			    </listbox>
-			    
-			    
-			    
 			</vbox>
 			
 			<vbox hflex="1" />
