--- a/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
@@ -114,113 +114,123 @@
 					</vbox>
 				</hbox>
 				
-				<!-- Lekce -->
-				<listbox model="@load(vm.course.lessonList)"
-					id="lessonList"
-					hflex="1"
-					style="margin-top: 20px;"
-					mold="paging"
-					pageSize="10"
-					visible="@load(vm.updateMode)"
-					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-					class="listbox" >
-			        <auxhead>
-			            <auxheader class="header" colspan="3" >
-			            	<hbox hflex="1" height="42px" align="center" >
-				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox>
-				            			<vbox>
-				            				<label value="${c:l('txt.ui.common.lessons')}" />
-										</vbox>
-			            			</hbox>
-			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-			            			<hbox>
-			            				<button onClick="@command('newLessonCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
-<!-- 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=lessonList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" /> -->
-<!-- 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" /> -->
-									</hbox>
-								</vbox>
-							</hbox>
-			            </auxheader>
-			        </auxhead>
-					
-			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.dayOfWeek')}" align="left" />
-			            <listheader label="${c:l('txt.ui.common.time')}" align="left" />
-			            <listheader width="50px" align="center" />
-			        </listhead>
-			         
-			        <template name="model">
-			            <listitem>
-			                <listcell label="TODO" />
-			                <listcell label="TODO" />	                	
-			                <listcell>
-			                	<button iconSclass="z-icon-close" tooltiptext="Odebrat" onClick="@command('lessonDeleteCmd', uuid=each.uuid)" hflex="min" width="20px" />
-			                </listcell>
-			            </listitem>
-			        </template>
-			    </listbox>
-			    
-				<!-- Ucastnici kurzu -->
-				<listbox model="@load(vm.course.participantList)"
-					id="courseParticipantList"
-					hflex="1"
-					style="margin-top: 20px;"
-					mold="paging"
-					pageSize="10"
-					visible="@load(vm.updateMode)"
-					multiple="true"
-					checkmark="true"
-					selectedItems="@bind(vm.participantSelectedList)"
-					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-					class="listbox" >
-			        <auxhead>
-			            <auxheader class="header" colspan="4" >
-			            	<hbox hflex="1" height="42px" align="center" >
-				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox>
-				            			<vbox>
-				            				<label value="${c:l('txt.ui.common.participants')}" />
-										</vbox>
-			            			</hbox>
-			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
-			            			<hbox>
-			            				<button tooltiptext="${c:l('txt.ui.common.remove')}" sclass="btn-danger" iconSclass="z-icon-minus" onClick="@command('courseParticipantsDeleteCmd')" />
-			            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" />
-			            				<menupopup id="addCourseParticipantsFromApplicationPopup" >
-											<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
-											<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
-								       	</menupopup>
-									</hbox>
-								</vbox>
-							</hbox>
-			            </auxheader>
-			        </auxhead>
-					
-			        <listhead>
-			        	<listheader width="25px" />
-			            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(contact.surname)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(birthdate)" align="left" />
-			            <listheader width="50px" align="center" />
-			        </listhead>
-			         
-			        <template name="model">
-			            <listitem>
-			            	<listcell/>
-			                <listcell label="${each.contact.surname} ${each.contact.firstname}" />
-			                <listcell label="@load(each.birthdate) @converter(vm.dateConverter)" />	                	
-			                <listcell>
-			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}" />
-			                	<menupopup id="menuCourse_${each.uuid}" >
-									<menuitem label="${c:l('txt.ui.common.detail')}" onClick="@command('courseParticipantDetailCmd', uuid=each.uuid)" />
-									<menuitem label="${c:l('txt.ui.common.remove')}" onClick="@command('courseParticipantDeleteCmd', uuid=each.uuid)"  />
-						       	</menupopup>
-			                </listcell>
-			            </listitem>
-			        </template>
-			    </listbox>
+				<tabbox id="tb" hflex="1" visible="@load(vm.updateMode)" style="margin-top: 20px;">
+				    <tabs id="tabs">
+				        <tab id="courseParticipants" label="${c:l('txt.ui.common.participants')}" />
+				        <tab id="lessons" label="${c:l('txt.ui.common.lessons')}" />
+				    </tabs>
+				    <tabpanels>
+				        <tabpanel>
+				        	<!-- Ucastnici kurzu -->
+							<listbox model="@load(vm.course.participantList)"
+								id="courseParticipantList"
+								hflex="1"
+								mold="paging"
+								pageSize="10"
+								visible="@load(vm.updateMode)"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox" >
+						        <auxhead>
+						            <auxheader class="header" colspan="3" >
+						            	<hbox hflex="1" height="42px" align="center" >
+							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+						            			<hbox>
+							            			<vbox>
+							            				<label value="${c:l('txt.ui.common.participants')}" />
+													</vbox>
+						            			</hbox>
+						            		</vbox>
+						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
+						            			<hbox>
+<!-- 						            				<button tooltiptext="${c:l('txt.ui.common.remove')}" sclass="btn-danger" iconSclass="z-icon-minus" onClick="@command('courseParticipantsDeleteCmd')" /> -->
+						            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" />
+						            				<menupopup id="addCourseParticipantsFromApplicationPopup" >
+														<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
+														<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
+											       	</menupopup>
+												</hbox>
+											</vbox>
+										</hbox>
+						            </auxheader>
+						        </auxhead>
+								
+						        <listhead>
+<!-- 						        	<listheader width="25px" /> -->
+						            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(contact.surname)" align="left" />
+						            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(birthdate)" align="left" />
+						            <listheader width="50px" align="center" />
+						        </listhead>
+						         
+						        <template name="model">
+						            <listitem>
+<!-- 						            	<listcell/> -->
+						                <listcell label="${each.contact.surname} ${each.contact.firstname}" />
+						                <listcell label="@load(each.birthdate) @converter(vm.dateConverter)" />	                	
+						                <listcell>
+						                	<button sclass="btn-danger" iconSclass="z-icon-minus" tooltiptext="${c:l('txt.ui.common.remove')}" 
+						                		onClick="@command('courseParticipantDeleteCmd', uuid=each.uuid)" 
+						                		hflex="min" width="20px" />
+<!-- 						                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourse_${each.uuid}" /> -->
+<!-- 						                	<menupopup id="menuCourse_${each.uuid}" > -->
+<!-- 												<menuitem label="${c:l('txt.ui.common.detail')}" onClick="@command('courseParticipantDetailCmd', uuid=each.uuid)" /> -->
+<!-- 												<menuitem label="${c:l('txt.ui.common.remove')}" onClick="@command('courseParticipantDeleteCmd', uuid=each.uuid)"  /> -->
+<!-- 									       	</menupopup> -->
+						                </listcell>
+						            </listitem>
+						        </template>
+						    </listbox>
+				        </tabpanel>
+				        <tabpanel>
+				        	<!-- Lekce -->
+							<listbox model="@load(vm.course.lessonList)"
+								id="lessonList"
+								hflex="1"
+								mold="paging"
+								pageSize="10"
+								visible="@load(vm.updateMode)"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox" >
+						        <auxhead>
+						            <auxheader class="header" colspan="3" >
+						            	<hbox hflex="1" height="42px" align="center" >
+							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+						            			<hbox>
+							            			<vbox>
+							            				<label value="${c:l('txt.ui.common.lessons')}" />
+													</vbox>
+						            			</hbox>
+						            		</vbox>
+						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
+						            			<hbox>
+						            				<button onClick="@command('newLessonCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
+												</hbox>
+											</vbox>
+										</hbox>
+						            </auxheader>
+						        </auxhead>
+								
+						        <listhead>
+						            <listheader label="${c:l('txt.ui.common.dayOfWeek')}" align="left" />
+						            <listheader label="${c:l('txt.ui.common.time')}" align="left" />
+						            <listheader width="50px" align="center" />
+						        </listhead>
+						         
+						        <template name="model">
+						            <listitem>
+						                <listcell label="@load(each.dayOfWeek) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', lesson=each)" />
+						                <listcell onDoubleClick="@command('detailCmd', lesson=each)" >
+						                	<label value="@load(each.timeFrom) @converter(vm.timeConverter)" /> - 
+						                	<label value="@load(each.timeTo) @converter(vm.timeConverter)" />
+						                </listcell>	                	
+						                <listcell>
+						                	<button  sclass="btn-danger" iconSclass="z-icon-minus" tooltiptext="${c:l('txt.ui.common.remove')}" onClick="@command('lessonDeleteCmd', uuid=each.uuid)" hflex="min" width="20px" />
+						                </listcell>
+						            </listitem>
+						        </template>
+						    </listbox>
+				        </tabpanel>
+				    </tabpanels>
+				</tabbox>
 			</vbox>
 			
 			<vbox hflex="1" />
