--- a/scb-ui-zk/src/main/webapp/pages/secured/participant-to-course-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/participant-to-course-window.zul
@@ -1,18 +1,19 @@
 <window id="modalWindow"
-	title="Přiřazení účastníka do kurzu" 
+	title="${c:l('txt.ui.common.assignParticipantToCourse')}" 
 	border="normal" 
     width="550px"
     position="center,center" 
     closable="true">
     
-    <vlayout apply="org.zkoss.bind.BindComposer" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.ParticipantToCourseWinVM')">
+    <vlayout viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.ParticipantToCourseWinVM')">
     	
     	<!-- Vyber z jineho kurzu -->
-    	<hbox visible="@load(vm.selectCourseVisible)">
+    	<hbox visible="@load(vm.selectCourseVisible)" align="center" >
 		    <label value="${c:l('txt.ui.common.course')}: " />
 		    <listbox selectedItem="@bind(vm.courseSelected)" 
 				model="@load(vm.courseList)"
 				mold="select"
+				sclass="form-input-text"
 				onSelect="@command('changeCourseCmd')" >
 				<template name="model">
 	               	<listitem label="@bind(each.name)" value="@bind(each)"/>
@@ -53,39 +54,39 @@
 	        </auxhead>
 	        
 	        <!-- Filter -->
-<!-- 			<auxhead height="37px"> -->
-<!-- 				<auxheader class="filter"> -->
-<!-- 					<textbox hflex="1" -->
-<!-- 						instant="true" -->
-<!-- 						value="@bind(vm.filter.courseParticName)" -->
-<!-- 						onChange="@command('filterDomCmd')" /> -->
-<!-- 				</auxheader> -->
-<!-- 				<auxheader class="filter"> -->
-<!-- 					<textbox hflex="1"  -->
-<!-- 						instant="true" -->
-<!-- 						value="@bind(vm.filter.birthDate)" -->
-<!-- 						onChange="@command('filterDomCmd')" /> -->
-<!-- 				</auxheader> -->
+			<auxhead height="37px">
+				<auxheader class="filter">
+				</auxheader>
+				<auxheader class="filter">
+					<textbox hflex="1"
+						instant="true"
+						value="@bind(vm.filter.courseParticName)"
+						onChange="@command('filterDomCmd')" />
+				</auxheader>
+				<auxheader class="filter">
+				</auxheader>
 <!-- 				<auxheader class="filter"> -->
 <!-- 					<textbox hflex="1"  -->
 <!-- 						instant="true" -->
 <!-- 						value="@bind(vm.filter.birthNo)" -->
 <!-- 						onChange="@command('filterDomCmd')" /> -->
 <!-- 				</auxheader> -->
-<!-- 				<auxheader class="filter"> -->
-<!-- 					<textbox hflex="1"  -->
-<!-- 						instant="true" -->
-<!-- 						value="@bind(vm.filter.courseParticRepresentative)" -->
-<!-- 						onChange="@command('filterDomCmd')" /> -->
-<!-- 				</auxheader> -->
-<!-- 			</auxhead> -->
+				<auxheader class="filter">
+					<textbox hflex="1" 
+						instant="true"
+						value="@bind(vm.filter.courseParticRepresentative)"
+						onChange="@command('filterDomCmd')" />
+				</auxheader>
+				<auxheader class="filter" />
+			</auxhead>
 			
 	        <listhead>
 	            <listheader width="25px" />
-	            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" hflex="4" />
+	            <listheader label="${c:l('txt.ui.common.participant')} (${c:l('txt.ui.common.child')})" sort="auto(courseParticipant.contact.surname)" align="left" hflex="3" />
 	            <listheader label="${c:l('txt.ui.common.birthDate')}" sort="auto(courseParticipant.birthdate)" align="center" hflex="2" />
-	            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="center" sort="auto(courseParticipant.personalNo)" hflex="2" />
-	            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)" align="left" hflex="4" />
+<!-- 	            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="center" sort="auto(courseParticipant.personalNo)" hflex="2" /> -->
+	            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)" align="left" hflex="3" />
+	            <listheader label="V kurzu" align="center" hflex="1" />
 	        </listhead>
 	         
 	        <template name="model">
@@ -93,8 +94,10 @@
 	                <listcell/>
 	                <listcell label="${each.courseParticipant.contact.surname} ${each.courseParticipant.contact.firstname}" />
 	                <listcell label="@load(each.courseParticipant.birthdate) @converter(vm.dateConverter)" />
-	                <listcell label="${each.courseParticipant.personalNo}" />
+<!-- 	                <listcell label="${each.courseParticipant.personalNo}" /> -->
 	                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
+	                <listcell iconSclass="z-icon-check" style="color: red;" visible="${each.courseParticipant.inCourse()}" tooltiptext="${each.courseParticipant.inCourseInfo()}" />
+	                <listcell visible="${!each.courseParticipant.inCourse()}" />
 	            </listitem>
 	        </template>
 	    </listbox>
