notification mail about new course application

--- a/scb-ui-zk/src/main/resources/prihlaska_report.jrxml
+++ b/scb-ui-zk/src/main/resources/prihlaska_report.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="prihlaska_report" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="a55adce4-c6f6-4eb2-9966-8c944668fcb1">
 	<property name="ireport.zoom" value="1.6105100000000008"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="598"/>
+	<property name="ireport.y" value="214"/>
 	<parameter name="reportTitle" class="java.lang.String"/>
 	<parameter name="courseParticipantTitle" class="java.lang.String"/>
 	<parameter name="organizationNameTitle" class="java.lang.String"/>
@@ -228,7 +228,7 @@
 			<textField>
 				<reportElement x="0" y="397" width="555" height="47" uuid="7d56db2b-83a7-4a63-b801-9e9f03695646"/>
 				<textElement>
-					<font size="8"/>
+					<font size="8" pdfEncoding="Cp1250"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{healthInfo}]]></textFieldExpression>
 			</textField>
