--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
@@ -48,6 +48,12 @@
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
 			            			<hbox>
+<!-- 			            				<listbox id="courseYear" selectedItem="@bind(vm.courseYearSelected)"  -->
+<!-- 											onSelect="@command('courseYearChangeCmd')" -->
+<!-- 											model="@load(vm.courseYearList)" -->
+<!-- 											mold="select" -->
+<!-- 											height="25px" > -->
+<!-- 										</listbox> -->
 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseApplicationList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
