--- a/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
@@ -13,6 +13,9 @@
 		<menuitem label="${c:l('txt.ui.menu.courses')}" 
 			href="/pages/secured/seznam-kurzu.zul" 
 			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))" />
+		<menuitem label="${c:l('txt.ui.common.participants')}" 
+			href="/pages/secured/seznam-ucastniku.zul" 
+			visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))" />
 		<menu label="Hardware" visible="false">
 			<menupopup>
 				<menu label="Mainboard">
