--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-ucastniku.zul
@@ -15,7 +15,7 @@
 			<vbox hflex="1" />
 			
 			<vbox hflex="20" pack="center">
-				<headline label="${c:l('txt.ui.menu.applications')}" menuSelected="menu_applicationToClubList" />
+				<headline label="${c:l('txt.ui.common.participants')}" menuSelected="menu_courseParticipantList" />
 			</vbox>
 			
 			<vbox hflex="1" />
@@ -37,12 +37,12 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="8" >
+			            <auxheader class="header" colspan="7" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox>
 				            			<vbox>
-				            				<label value="${c:l('txt.ui.menu.applicationList')}" />
+				            				<label value="${c:l('txt.ui.common.courseParticipantList')}" />
 										</vbox>
 			            			</hbox>
 			            		</vbox>
@@ -102,13 +102,7 @@
 						<auxheader class="filter">
 							<textbox hflex="1" 
 								instant="true"
-								value="@bind(vm.filter.email)"
-								onChange="@command('filterDomCmd')" />
-						</auxheader>
-						<auxheader class="filter">
-							<textbox hflex="1" 
-								instant="true"
-								value="@bind(vm.filter.modifAt)"
+								value="@bind(vm.filter.course)"
 								onChange="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
@@ -121,8 +115,7 @@
 			            <listheader label="${c:l('txt.ui.common.birthNumber')}" align="left" sort="auto(courseParticipant.personalNo)" />
 			            <listheader label="${c:l('txt.ui.common.representative')}" sort="auto(courseParticRepresentative.contact.surname)"  align="left" />
 			            <listheader label="${c:l('txt.ui.common.phone')}" sort="auto(courseParticRepresentative.contact.phone1)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.email')}" sort="auto(courseParticRepresentative.contact.email1)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.createdAt')}" sort="auto(modifAt)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.course')}" sort="auto(courseParticipant.inCourseInfo()})" align="left" />
 			            <listheader width="50px" align="center" />
 			        </listhead>
 			         
@@ -133,13 +126,11 @@
 			                <listcell label="${each.courseParticipant.personalNo}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="${each.courseParticRepresentative.contact.email1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
-			                <listcell label="@load(each.modifAt) @converter(vm.dateTimeConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
+			                <listcell label="${each.courseParticipant.inCourseInfo()}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />			                	
 			                <listcell>
 			                	<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuCourseApplication_${each.uuid}" />
 			                	<menupopup id="menuCourseApplication_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', uuid=each.uuid)"  />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
