--- a/scb-ui-zk/src/main/webapp/pages/secured/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ucastnik.zul
@@ -17,7 +17,7 @@
 					<vbox hflex="20" pack="center" align="center" >
 						<hbox hflex="1" pack="end" align="center" >
 							<vbox hflex="1" align="center" >
-								<headline label="${c:l('txt.ui.common.participantDetail')}" menuSelected="menu_applicationToClub" />
+								<headline label="${c:l('txt.ui.common.participantDetail')}" menuSelected="menu_courseParticipantList" />
 							</vbox>
 						</hbox>
 						<vbox hflex="1" vflex="1" align="end" pack="center">
@@ -38,35 +38,269 @@
 					<!-- Formular -->
 					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" >
 						
-						<!-- Ucastnik -->
-						<grid hflex="1" sclass="form-grid" >
-							<columns>
-				                <column align="center" hflex="1" />
-				            </columns>
-							<rows style="background: white;" >
-								<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
-									<cell sclass="form-grid-cell" >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.firstname')}"/>
-											<textbox id="particFirstname" 
-												maxlength="@load(vm.getFirstnameMaxlength())"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="1"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
-													<label value="@bind(vmsgs[particFirstname])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-							</rows>
-						</grid>
-						
-						<hbox style="margin-bottom: 20px;">
+						<tabbox id="tb" >
+						    <tabs id="tabs">
+						        <tab id="courseParticipant" label="${c:l('txt.ui.common.participant')}" />
+						        <tab id="courseParticipantRepresentative" label="${c:l('txt.ui.common.representative')}" />
+						        <tab id="courseParticipantResult" label="${c:l('txt.ui.common.results')}" />
+						    </tabs>
+						    <tabpanels>
+						    	<tabpanel>
+						    		<!-- Ucastnik -->
+									<grid hflex="1" sclass="form-grid" >
+										<columns>
+							                <column align="center" hflex="1" />
+							            </columns>
+										<rows style="background: white;" >
+											<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.firstname')}"/>
+														<textbox id="particFirstname" 
+															maxlength="@load(vm.getFirstnameMaxlength())"
+															value="@bind(fx.participant.courseParticipant.contact.firstname) @validator(vm.notNullValidator)"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="1"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
+																<label value="@bind(vmsgs[particFirstname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+												<cell sclass="form-grid-cell">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.surname')}"/>
+														<textbox id="particSurname"
+															value="@bind(fx.participant.courseParticipant.contact.surname) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getSurnameMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="2"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
+																<label value="@bind(vmsgs[particSurname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+												<cell sclass="form-grid-cell">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.birthDate')}"/>
+														<datebox id="particBirthdate"
+															value="@bind(fx.participant.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+						                            		format="@load(vm.dateFormat)" 
+						                            		maxlength="@load(vm.getDateMaxlength())"
+						                            		placeholder="*"
+						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+						                            		tabindex="3" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
+																	<label value="@bind(vmsgs[particBirthdate])" />
+																</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+												<cell sclass="form-grid-cell">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.birthNumber')}"/>
+														<textbox id="particBirthNumber"
+															value="@bind(fx.participant.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+						                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+						                            		placeholder="*"
+						                            		sclass="form-input-text"
+						                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+						                            		tabindex="4"
+						                            		hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+																<label value="@bind(vmsgs[particBirthNumber])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
+												<cell sclass="form-grid-cell">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.healthInsurance')}"/>
+														<textbox id="particHealthInsurance"
+															value="@bind(fx.participant.courseParticipant.healthInsurance) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getHealthInsuranceMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="5"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
+																<label value="@bind(vmsgs[particHealthInsurance])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 30px 30px;">
+												<cell sclass="form-grid-cell">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.application.healthInfo')}"/>
+														<textbox rows="3" hflex="3" multiline="true"
+															value="@bind(fx.participant.courseParticipant.healthInfo)" tabindex="6"
+															sclass="form-input-textarea"
+															maxlength="@load(vm.getHealthInfoMaxlength())" />
+													</vbox>
+												</cell>
+											</row>
+										</rows>
+									</grid>
+						    	</tabpanel>
+						    	<tabpanel>
+						    		<!-- Zakonny zastupce -->
+									<grid hflex="1" sclass="form-grid" >
+										<columns>
+							                <column align="center" hflex="1" />
+							            </columns>
+										<rows style="background: white;">
+											<row sclass="form-grid-row" style="border: none; padding: 20px 30px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.firstname')}"/>
+														<textbox id="representativeFirstname"
+															value="@bind(fx.participant.courseParticRepresentative.contact.firstname) @validator(vm.notNullValidator)" 
+															maxlength="@load(vm.getFirstnameMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="7"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
+																<label value="@bind(vmsgs[representativeFirstname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.surname')}"/>
+														<textbox id="representativeSurname"
+															value="@bind(fx.participant.courseParticRepresentative.contact.surname) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getSurnameMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="8"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
+																<label value="@bind(vmsgs[representativeSurname])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.phone')} 1"/>
+														<textbox id="representativePhone1"
+															value="@bind(fx.participant.courseParticRepresentative.contact.phone1) @validator(vm.notNullValidator)"
+															maxlength="@load(vm.getPhoneMaxlength())"
+															placeholder="*"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="9"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
+																<label value="@bind(vmsgs[representativePhone1])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.phone')} 2:"/>
+														<textbox id="representativePhone2" 
+															value="@bind(fx.participant.courseParticRepresentative.contact.phone2)"
+															maxlength="@load(vm.getPhoneMaxlength())"
+															sclass="form-input-text"
+															tabindex="10"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											
+											<row sclass="form-grid-row" style="border: none; padding: 0px 10px 10px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.email')} 1"/>
+														<hbox hflex="1">
+															<textbox id="representativeEmail1"
+																value="@bind(fx.participant.courseParticRepresentative.contact.email1) @validator(vm.emailValidator, notNull=true)"
+																maxlength="@load(vm.getEmailMaxlength())"
+																placeholder="*"
+																sclass="form-input-text"
+																tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+																tabindex="11"
+																hflex="1" />
+														</hbox>
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail1])" >
+																	<label value="@bind(vmsgs[representativeEmail1])" />
+																</span>	
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+											
+											<row sclass="form-grid-row" style="border: none; padding: 0px 30px 30px 30px;" >
+												<cell sclass="form-grid-cell" >
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.email')} 2"/>
+														<textbox id="representativeEmail2" 
+															value="@bind(fx.participant.courseParticRepresentative.contact.email2) @validator(vm.emailValidator)"
+															maxlength="@load(vm.getEmailMaxlength())"
+															sclass="form-input-text"
+															tabindex="12"
+															hflex="1" />
+														<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+															<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
+																<label value="@bind(vmsgs[representativeEmail2])" />
+															</span>
+														</hbox>
+													</vbox>
+												</cell>
+											</row>
+										</rows>
+									</grid>
+						    	</tabpanel>
+						    	<tabpanel>
+						    	</tabpanel>
+						    </tabpanels>
+					    </tabbox>
+						<hbox style="margin-top: 20px;">
 							<vbox>
 								<button label="Uložit"
 									onClick="@command('submit')" 
