--- a/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
@@ -1,6 +1,4 @@
-<div sclass="main-menu" 
-	apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')" >
+<div sclass="main-menu" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')" >
 	
 	<hlayout spacing="0">
 		<!--
