--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-prihlasek.zul
@@ -25,8 +25,7 @@
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center" apply="org.zkoss.bind.BindComposer" 
-			 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
+			<vbox hflex="20" pack="center" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationListVM')">
 				
 				<listbox model="@load(vm.courseApplicationList)"
 					id="courseApplicationList"
