--- a/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menuMobile.zul
@@ -1,7 +1,6 @@
 <zk>
-
-	<menubar id="menubar" orient="vertical" autodrop="true" apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')">
+	<menubar id="menubar" orient="vertical" autodrop="true" 
+		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.common.security.SecurityVM')">
 		<menuitem label="Home" 
 			href="/" visible="@load(!vm.isUserLogged())" />
 		<menuitem label="${c:l('txt.ui.menu.application')}" 
