--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -3,7 +3,7 @@
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
 <zk>
-	<borderlayout self="@{define(mainContent)}" hflex="1" vflex="1" apply="org.zkoss.bind.BindComposer" 
+	<borderlayout self="@{define(mainContent)}" hflex="1" vflex="1" 
 		 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.DashboardVM')" >
 		<center border="none" style="background:#dfe8f6 url('${pageContext.request.contextPath}/resources/img/background2014Full.jpg') no-repeat center center;" >
 			<div>
@@ -18,7 +18,17 @@
 						<button label="@load(vm.newCourseApplicationTitle)" 
 							href="/pages/public/prihlaska-do-klubu.zul"
 							sclass="btn-warning" iconSclass="z-icon-file-text"
+							visible="@load(vm.isCourseApplicationAllowed())"
 							style="margin-right: 10px; margin-top: 20px; font-weight: bold; height: 50px" />
+						
+						<!-- Prihlasky nejsou povoleny info -->
+						<vbox hflex="20" pack="center" align="center" sclass="vbox-content" style="margin-right: 10px; margin-top: 20px;" visible="@load(!vm.courseApplicationAllowed)" >
+							<window closable="false" border="normal" sclass="alert alert-danger" >
+								<caption iconSclass="z-icon-exclamation">
+									<label value="Přihlášky do plaveckého kurzu nejsou aktuálně otevřené."/>
+								</caption>
+							</window>
+						</vbox>
 					</vbox>
 					
 					<vbox hflex="1" />
