--- a/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
@@ -6,8 +6,7 @@
 
 
 <zk>
-	<div self="@{define(mainContent)}" hflex="1" apply="org.zkoss.bind.BindComposer" 
-			 viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseVM')"
+	<div self="@{define(mainContent)}" hflex="1" viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseVM')"
 			 validationMessages="@id('vmsgs')"
        		 form="@id('fx') @load(vm) @save(vm, before='submit')" >
 		<style>
