--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -4,7 +4,7 @@
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
 
 <zk>
-	<borderlayout self="@{define(mainContent)}" hflex="1" apply="org.zkoss.bind.BindComposer" 
+	<borderlayout self="@{define(mainContent)}" hflex="1"
 		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseApplicationVM')"
 		validationMessages="@id('vmsgs')"
 	    form="@id('fx') @load(vm) @save(vm, before='submit')" >
@@ -18,7 +18,7 @@
 					<vbox hflex="20" pack="center" align="center" >
 						<hbox hflex="1" pack="end" align="center" >
 							<vbox hflex="1" align="center" >
-								<headline label="${vm.pageHeadline}" menuSelected="menu_applicationToClubList" />
+								<headline label="${vm.pageHeadline}" menuSelected="menu_applicationToClub" />
 							</vbox>
 						</hbox>
 						<vbox hflex="1" vflex="1" align="end" pack="center">
@@ -38,12 +38,17 @@
 					
 					<!-- Potvrzujici info -->
 					<vbox hflex="20" pack="center" align="center" sclass="vbox-content" visible="@load(vm.showNotification)">
-						<window closable="false" border="normal" sclass="alert alert-success">
+						<window closable="false" border="normal" sclass="alert alert-success" visible="@load(vm.confirmText ne null)">
 							<caption iconSclass="z-icon-check">
 								<label value="@load(vm.confirmText)"/>
 							</caption>
 						</window>
-						<button label="${c:l('txt.ui.common.ToDownloadApplication')}" onClick="@command('downloadCmd')" iconSclass="z-icon-download" />
+						<button label="${c:l('txt.ui.common.ToDownloadApplication')}" onClick="@command('downloadCmd')" iconSclass="z-icon-download" visible="@load(vm.confirmText ne null)" />
+						<window closable="false" border="normal" sclass="alert alert-danger" visible="@load(vm.errotText ne null)" >
+							<caption iconSclass="z-icon-exclamation">
+								<label value="@load(vm.errotText)"/>
+							</caption>
+						</window>
 					</vbox>
 		
 					<!-- Formular -->
@@ -110,6 +115,97 @@
 										</vbox>
 									</cell>
 								</row>
+								
+								
+								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+									<cell sclass="form-grid-cell">
+										<vbox hflex="1">
+											<label value="${c:l('txt.ui.common.street')}"/>
+											<textbox id="particStreet" readonly="@load(!vm.editMode)"
+												value="@bind(fx.application.courseParticipant.contact.street)"
+												maxlength="240"
+												sclass="form-input-text"
+												tabindex="3"
+												hflex="1" />
+											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											</hbox>
+										</vbox>
+									</cell>
+								</row>
+								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+									<cell sclass="form-grid-cell">
+										<vbox hflex="1">
+											<hbox>
+												<vbox>
+													<label value="${c:l('txt.ui.common.landRegNo')}"/>
+													<intbox id="particLandRegNo" readonly="@load(!vm.editMode)"
+														value="@bind(fx.application.courseParticipant.contact.landRegistryNumber)"
+														maxlength="11"
+														placeholder="*"
+														constraint="no empty"
+														sclass="form-input-text"
+														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+														tabindex="4"
+														hflex="1" />
+												</vbox>
+												<vbox>
+													<label value="${c:l('txt.ui.common.houseNo')}"/>
+													<intbox id="particHouseNo" readonly="@load(!vm.editMode)"
+														value="@bind(fx.application.courseParticipant.contact.houseNumber)"
+														maxlength="6"
+														sclass="form-input-text"
+														tabindex="5"
+														hflex="1" />
+												</vbox>
+											</hbox>
+											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+											</hbox>
+										</vbox>
+									</cell>
+								</row>
+								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+									<cell sclass="form-grid-cell">
+										<vbox hflex="1">
+											<label value="${c:l('txt.ui.common.city')}"/>
+											<textbox id="particCity" readonly="@load(!vm.editMode)"
+												value="@bind(fx.application.courseParticipant.contact.city) @validator(vm.notNullValidator)"
+												maxlength="240"
+												placeholder="*"
+												sclass="form-input-text"
+												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+												tabindex="6"
+												hflex="1" />
+											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particCity])" >
+													<label value="@bind(vmsgs[particCity])" />
+												</span>
+											</hbox>
+										</vbox>
+									</cell>
+								</row>
+								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;;">
+									<cell sclass="form-grid-cell">
+										<vbox hflex="1">
+											<label value="${c:l('txt.ui.common.zipCode')}"/>
+											<textbox id="particZipCode" readonly="@load(!vm.editMode)"
+												value="@bind(fx.application.courseParticipant.contact.zipCode) @validator(vm.notNullValidator)"
+												maxlength="32"
+												placeholder="*"
+												sclass="form-input-text"
+												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+												tabindex="7"
+												hflex="1" />
+											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particZipCode])" >
+													<label value="@bind(vmsgs[particZipCode])" />
+												</span>
+											</hbox>
+										</vbox>
+									</cell>
+								</row>
+								
+								
+								
 								<row sclass="form-grid-row" style="border: none; padding: 0px 30px 10px 30px;">
 									<cell sclass="form-grid-cell">
 										<vbox hflex="1">
@@ -120,7 +216,7 @@
 			                            		maxlength="@load(vm.getDateMaxlength())"
 			                            		placeholder="*"
 			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-			                            		tabindex="3" />
+			                            		tabindex="8" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
 														<label value="@bind(vmsgs[particBirthdate])" />
@@ -139,7 +235,7 @@
 			                            		placeholder="*"
 			                            		sclass="form-input-text"
 			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-			                            		tabindex="4"
+			                            		tabindex="9"
 			                            		hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
@@ -159,7 +255,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="5"
+												tabindex="10"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
@@ -174,7 +270,7 @@
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.application.healthInfo')}"/>
 											<textbox rows="3" hflex="3" multiline="true" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.healthInfo)" tabindex="6"
+												value="@bind(fx.application.courseParticipant.healthInfo)" tabindex="11"
 												sclass="form-input-textarea"
 												maxlength="@load(vm.getHealthInfoMaxlength())" />
 										</vbox>
@@ -210,7 +306,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="7"
+												tabindex="12"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
@@ -231,7 +327,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="8"
+												tabindex="13"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
@@ -252,7 +348,7 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="9"
+												tabindex="14"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
@@ -271,7 +367,7 @@
 												value="@bind(fx.application.courseParticRepresentative.contact.phone2)"
 												maxlength="@load(vm.getPhoneMaxlength())"
 												sclass="form-input-text"
-												tabindex="10"
+												tabindex="15"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												
@@ -291,7 +387,7 @@
 													placeholder="*"
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-													tabindex="11"
+													tabindex="16"
 													hflex="1" />
 												<a iconSclass="z-icon-info-circle" popup="emailPopup" style="margin-left: 5px" />
 											</hbox>
@@ -312,7 +408,7 @@
 												value="@bind(fx.application.courseParticRepresentative.contact.email2) @validator(vm.emailValidator)"
 												maxlength="@load(vm.getEmailMaxlength())"
 												sclass="form-input-text"
-												tabindex="12"
+												tabindex="17"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
@@ -326,12 +422,12 @@
 						</grid>
 						
 						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)">
-							<checkbox checked="@bind(vm.healthInfoAgreement)" tabindex="13" />
+							<checkbox checked="@bind(vm.healthInfoAgreement)" tabindex="18" />
 							<label value="${c:l('txt.ui.application.healthAgreement')}" />
 						</hbox>
 						
 						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" style="margin-top: 20px;">
-							<checkbox checked="@bind(vm.personalInfoProcessAgreement)" tabindex="14" />
+							<checkbox checked="@bind(vm.personalInfoProcessAgreement)" tabindex="19" />
 							<hbox>
 								<span>
 									<label value="${c:l('txt.ui.application.personaldataProcessAgreement')}" />
@@ -344,7 +440,7 @@
 							<vbox align="center">
 							    <button label="jiný obrázek" onClick="cap1.randomValue();"/>
 							    <bw.captcha id="cap1" />
-							    <textbox id="captcha" style="margin-bottom: 15px;" value="@bind(fx.captcha) @validator(vm.captchaValidator, catpt=cap1, validate=(vm.editMode and !vm.securedMode))" tabindex="14" />
+							    <textbox id="captcha" style="margin-bottom: 15px;" value="@bind(fx.captcha) @validator(vm.captchaValidator, catpt=cap1, validate=(vm.editMode and !vm.securedMode))" tabindex="20" />
 							    <hbox height="20px">
 								    <span style="margin-left: 10px;" sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[captcha])" >
 										<label value="@bind(vmsgs[captcha])" />
@@ -355,7 +451,7 @@
 						
 						<hbox style="margin-bottom: 20px;">
 							<vbox>
-								<button label="Odeslat" tabindex="15"
+								<button label="Odeslat" tabindex="21"
 									onClick="@command('submit')" 
 									iconSclass="z-icon-check" 
 									visible="@load(vm.editMode and !vm.securedMode)" />
