--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
@@ -19,8 +19,8 @@
 		
 			<vbox hflex="1" />
 			
-			<vbox hflex="20" pack="center" apply="org.zkoss.bind.BindComposer" 
-			 	viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseListVM')">
+			<vbox hflex="20" pack="center" 
+				viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.courseapplication.vm.CourseListVM')">
 				
 				<listbox model="@load(vm.courseList)"
 					id="courseList"
